- Styling: fixed grid header prepend spacing.

--- a/RockWeb/Styles/styles-v2/rock-components/_grid-obsidian.scss
+++ b/RockWeb/Styles/styles-v2/rock-components/_grid-obsidian.scss
@@ -33,6 +33,10 @@
 
 .grid-obsidian .grid-header-prepend {
     border-bottom: 1px solid var(--color-interface-soft);
+
+    > * {
+        padding: var(--spacing-medium);
+    }
 }
 
 .grid-obsidian.grid-sticky .sticky-column-header {
