--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -15899,6 +15899,9 @@ textarea:focus,
 .grid-obsidian .grid-header-prepend {
   border-bottom: 1px solid var(--color-interface-soft);
 }
+.grid-obsidian .grid-header-prepend > * {
+  padding: var(--spacing-medium);
+}
 
 .grid-obsidian.grid-sticky .sticky-column-header {
   position: sticky;
